--- a/overlay-arrow/frameworks/base/core/res/res/values/arrow_config.xml
+++ b/overlay-arrow/frameworks/base/core/res/res/values/arrow_config.xml
@@ -35,4 +35,8 @@
     <!-- Whether the device has a popup camera -->
     <bool name="config_hasPopupCamera">true</bool>
 
+    <!-- Smart charging -->
+    <string name="config_SmartChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/input_suspend</string>
+    <string name="config_SmartChargingSuspendValue" translatable="false">1</string>
+    <string name="config_SmartChargingResumeValue" translatable="false">0</string>
 </resources>
