--- a/overlay-arrow/packages/apps/Settings/res/values/config.xml
+++ b/overlay-arrow/packages/apps/Settings/res/values/config.xml
@@ -32,4 +32,7 @@
 
     <!-- FOD recognizing animation -->
     <bool name="config_showFODAnimationSettings">true</bool>
+
+    <!-- Smart Charging -->
+    <bool name="config_supportSmartCharging">true</bool>
 </resources>
